TFP-4708: Kodeverk til string serialisering. Utvidet BestillBrevDto med enums. (#3793)